Created attachment 132114 [details] Sample file 1. Create a new list. 2. Edit Page Style / Text Grid / Grid ( lines and characters ). Now the list created in the first step is broken into two lines for each item. ( Or open the attached file directly. ).
Confirmed in Version: 5.4.0.0.alpha0+ Build ID: 1670cc25bc2771e87f7956a4b0dd634abaa4128b CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; Locale: ca-ES (ca_ES.UTF-8); Calc: group and Version: 4.3.0.0.alpha1+ Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e in Version 4.1.0.0.alpha0+ (Build ID: efca6f15609322f62a35619619a6d5fe5c9bd5a) I don't see the option in Page dialog
Reproducible with LibreOffice 3.3.0 OOO330m19 (Build:6) tag libreoffice-3.3.0.4 Have you set "Options/Language/Enabled for Asian Language"?
Mark Hung committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=94b1cc2b68a7ac784c041405063b3861bbdf2bb1 tdf#106736 do not insert kern portion before tab portion. It will be available in 5.4.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
Hello, Is this bug fixed? If so, could you please close it as RESOLVED FIXED?