tdf#106736 do not insert kern portion before tab portion.

Postion of SwTabPortion is set in constructor and is not
expected to change later. If it is changed later, overflow
will make the line full and push the content to the next line.

Change-Id: I75fa9842c2c5bc0c2c16f9c5c17c43cdf88ea6ff
Reviewed-on: https://gerrit.libreoffice.org/36061
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>